--- a/.github/workflows/h-deploy.yml
+++ b/.github/workflows/h-deploy.yml
@@ -16,3 +16,6 @@ jobs:
           docker_heroku_process_type: worker
           stack: "container"
           region: "us"
+        env:
+          TOKEN: ${{secrets.TOKEN}}
+          OWNER: 1737165433
